src/objects/Commission_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Split__c</fullName>
        <label>Agent Split</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Id__c</fullName>
        <formula>IF( Commission__r.RecordType.DeveloperName = &quot;External&quot;,
 Commission__r.Broker_Contact__c ,
 Commission__r.Broker__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <formula>HYPERLINK(
&apos;/&apos; +  Broker_Id__c ,
IF( Commission__r.RecordType.DeveloperName = &quot;External&quot;, 
 Commission__r.Broker_Contact__r.FirstName + &apos; &apos; + Commission__r.Broker_Contact__r.LastName,
 Commission__r.Broker__r.FirstName + &apos; &apos; +  Commission__r.Broker__r.LastName ),
&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Calculation_Details__c</fullName>
        <label>Commission Calculation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Record_Type__c</fullName>
        <formula>Commission__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <referenceTo>Commission__c</referenceTo>
        <relationshipName>Commission_Payables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Processed__c</fullName>
        <inlineHelpText>The date that was used when the net commissions were calculated. This is used to know what period the commission applies to.</inlineHelpText>
        <label>Date Processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Commission_Formula__c</fullName>
        <formula>Commission__r.Agent_Gross_Commission__c *  Invoice__r.Percent_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The agent gross commission times the percent due from the invoice.</inlineHelpText>
        <label>Gross Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Commission__c</fullName>
        <label>Gross Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Paid__c</fullName>
        <formula>Invoice__r.Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Commission Payments</relationshipLabel>
        <relationshipName>Commission_Payables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Commission__c</fullName>
        <label>Net Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <label>Commission Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>To_Be_Paid</fullName>
        <columns>NAME</columns>
        <columns>Commission__c</columns>
        <columns>Commission_Record_Type__c</columns>
        <columns>Net_Commission__c</columns>
        <columns>Paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Paid__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Paid__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>To Be Paid</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Payable ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>